
tutorialsdir = $(prefix)/tutorials

nobase_tutorials_DATA = place_and_route/src/Makefile \
                        place_and_route/src/amd2901/Makefile \
                        place_and_route/src/amd2901/amd2901_chip.c \
                        place_and_route/src/amd2901/amd2901_chip.rin \
                        place_and_route/src/amd2901/amd2901_core.c \
                        place_and_route/src/amd2901/amd2901_core.ioc \
                        place_and_route/src/amd2901/amd2901_ctl.lax \
                        place_and_route/src/amd2901/amd2901_ctl.vbe \
                        place_and_route/src/amd2901/amd2901_dpt.c \
                        place_and_route/src/amd2901/amd2901_dpt.vbe \
                        place_and_route/src/amd2901/pattern.c \
                        place_and_route/src/buffer/Makefile \
                        place_and_route/src/buffer/buf_x2.ap \
                        place_and_route/src/buffer/buffer.vbe \
                        place_and_route/src/inv/Makefile \
                        place_and_route/src/inv/inv.vbe \
                        place_and_route/src/inv/inv_x1.ap \
                        place_and_route/tex/Makefile \
                        place_and_route/tex/amd2901.epsi \
                        place_and_route/tex/bloc.fig \
                        place_and_route/tex/buff_x1.fig \
                        place_and_route/tex/colonnes.fig \
                        place_and_route/tex/controleplace.fig \
                        place_and_route/tex/dpt-all-1.fig \
                        place_and_route/tex/gabarit2_sx.fig \
                        place_and_route/tex/gabarit3_sx.fig \
                        place_and_route/tex/gabarit_sx.fig \
                        place_and_route/tex/hier.fig \
                        place_and_route/tex/hierarchie.fig \
                        place_and_route/tex/inv_x1.fig \
                        place_and_route/tex/place_and_route.tex \
                        place_and_route.pdf \
                        place_and_route/tex/placement.fig \
                        place_and_route/tex/preplacement.fig \
                        place_and_route/tex/stick.fig \
                        \
                        simulation/src/Makefile \
                        simulation/src/addaccu_beh/Makefile \
                        simulation/src/addaccu_beh/addaccu.vbe \
                        simulation/src/addaccu_beh/addaccu4.vhdl \
                        simulation/src/addaccu_beh/addaccu_dly.vbe \
                        simulation/src/addaccu_beh/patterns.pat \
                        simulation/src/addaccu_beh/patterns_dly.pat \
                        simulation/src/addaccu_struct/Makefile \
                        simulation/src/addaccu_struct/accu.vbe \
                        simulation/src/addaccu_struct/accu.vst \
                        simulation/src/addaccu_struct/addaccu.vbe \
                        simulation/src/addaccu_struct/addaccu.vst \
                        simulation/src/addaccu_struct/alu.vbe \
                        simulation/src/addaccu_struct/alu.vst \
                        simulation/src/addaccu_struct/mux.vbe \
                        simulation/src/addaccu_struct/mux.vst \
                        simulation/src/addaccu_struct/pat_new.c \
                        simulation/tex/Makefile \
                        simulation/tex/addac.fig \
                        simulation/tex/addac.jpg \
                        simulation/tex/cpt3.epsi \
                        simulation/tex/simulation.tex \
                        simulation.pdf \
                        \
                        start/Makefile \
                        start/start.tex \
                        start.pdf \
                        \
                        synthesis/src/Makefile \
                        synthesis/src/amd2901/Makefile \
                        synthesis/src/amd2901/amd.vst \
                        synthesis/src/amd2901/amd2901_chip.c \
                        synthesis/src/amd2901/amd2901_core.c \
                        synthesis/src/amd2901/amd2901_ctl.c \
                        synthesis/src/amd2901/amd2901_ctl.vbe \
                        synthesis/src/amd2901/amd2901_dpt.c \
                        synthesis/src/amd2901/amd2901_dpt.vbe \
                        synthesis/src/amd2901/circuit.c \
                        synthesis/src/amd2901/data_path.c \
                        synthesis/src/amd2901/pat.pat \
                        synthesis/src/amd2901/pattern.c \
                        synthesis/src/amd2901/pattern.pat \
                        synthesis/src/amdbug/Makefile \
                        synthesis/src/amdbug/amd_0.vbe \
                        synthesis/src/amdbug/amd_1.vbe \
                        synthesis/src/amdbug/amd_10.vbe \
                        synthesis/src/amdbug/amd_11.vbe \
                        synthesis/src/amdbug/amd_12.vbe \
                        synthesis/src/amdbug/amd_13.vbe \
                        synthesis/src/amdbug/amd_14.vbe \
                        synthesis/src/amdbug/amd_15.vbe \
                        synthesis/src/amdbug/amd_16.vbe \
                        synthesis/src/amdbug/amd_17.vbe \
                        synthesis/src/amdbug/amd_18.vbe \
                        synthesis/src/amdbug/amd_19.vbe \
                        synthesis/src/amdbug/amd_2.vbe \
                        synthesis/src/amdbug/amd_20.vbe \
                        synthesis/src/amdbug/amd_21.vbe \
                        synthesis/src/amdbug/amd_22.vbe \
                        synthesis/src/amdbug/amd_23.vbe \
                        synthesis/src/amdbug/amd_24.vbe \
                        synthesis/src/amdbug/amd_3.vbe \
                        synthesis/src/amdbug/amd_4.vbe \
                        synthesis/src/amdbug/amd_5.vbe \
                        synthesis/src/amdbug/amd_6.vbe \
                        synthesis/src/amdbug/amd_7.vbe \
                        synthesis/src/amdbug/amd_8.vbe \
                        synthesis/src/amdbug/amd_9.vbe \
                        synthesis/src/amdbug/amd_ok.vbe \
                        synthesis/src/amdbug/amdfindbug.c \
                        synthesis/src/digicode/Makefile \
                        synthesis/src/digicode/digicode.fsm \
                        synthesis/src/digicode/digicode.pat \
                        synthesis/src/digicode/paramfile.lax \
                        synthesis/src/digicode/scan.path \
                        synthesis/src/meter5/Makefile \
                        synthesis/src/meter5/cpt5.fsm \
                        synthesis/src/meter5/cpt5.pat \
                        synthesis/tex/Makefile \
                        synthesis/tex/T_RC.fig \
                        synthesis/tex/amd2901.epsi \
                        synthesis/tex/automate.fig \
                        synthesis/tex/bloc.fig \
                        synthesis/tex/clavier.fig \
                        synthesis/tex/ctl-alu-1.fig \
                        synthesis/tex/ctl-mrs-1.fig \
                        synthesis/tex/ctl-wen-1.fig \
                        synthesis/tex/ctldecode.fig \
                        synthesis/tex/ctldecodebw.fig \
                        synthesis/tex/datap.fig \
                        synthesis/tex/dpt-all-1.fig \
                        synthesis/tex/dpt-alu-1.fig \
                        synthesis/tex/dptbanc.fig \
                        synthesis/tex/ex_digicode.fig \
                        synthesis/tex/exemple1.fig \
                        synthesis/tex/exemple2.fig \
                        synthesis/tex/graphe1.fig \
                        synthesis/tex/graphe_solution_digicode.fig \
                        synthesis/tex/hier.fig \
                        synthesis/tex/synthese.fig \
                        synthesis/tex/synthesis.tex \
                        synthesis.pdf


EXTRA_DIST = $(nobase_tutorials_DATA)

start.pdf: $(srcdir)/start/start.tex
	cd $(srcdir)/start; make start.pdf
	cp $(srcdir)/start/start.pdf .

place_and_route.pdf: $(srcdir)/place_and_route/tex/place_and_route.tex
	cd $(srcdir)/place_and_route/tex; make place_and_route.pdf
	cp $(srcdir)/place_and_route/tex/place_and_route.pdf .

simulation.pdf: $(srcdir)/simulation/tex/simulation.tex
	cd $(srcdir)/simulation/tex; make simulation.pdf
	cp $(srcdir)/simulation/tex/simulation.pdf .

synthesis.pdf: $(srcdir)/synthesis/tex/synthesis.tex
	cd $(srcdir)/synthesis/tex; make synthesis.pdf
	cp $(srcdir)/synthesis/tex/synthesis.pdf .

